--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,9 @@
 <head>
     <title></title>
     <meta charset="UTF-8">
-    <link href="bower_components/bootstrap/dist/css/bootstrap.css" rel="stylesheet">
+    <link href="bower_components/bootstrap/dist/css/bootstrap.css" rel="stylesheet">    
+    <link href="bower_components/animate.css/animate.css" rel="stylesheet">
+    <link href="styles.css" rel="stylesheet">
 </head>
 
 <body ng-cloak>
@@ -12,6 +14,7 @@
     <movie-app></movie-app>
 
     <script src="bower_components/angular/angular.min.js"></script>
+    <script src="bower_components/angular-animate/angular-animate.min.js"></script>
     <script src="bower_components/angular-component-router/angular_1_router.js"></script>
     <script src="ps-movies/module.js"></script>
     <script src="ps-movies/movie-list.component.js"></script>
